<resources>
    <string name="app_name">Konselink-Client</string>
    <string name="placeholder_login_page">Ayo konsultasikan permasalahanmu sekarang dengan psikolog dari Universitas Indonesia</string>
    <string name="verification_in_progress">Registrasi telah selesai dilakukan. Mohon menunggu proses verifikasi</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_counselor">Konselor</string>
    <string name="logout">Logout</string>
    <string name="menu_consultation">Konsultasi</string>
    <string name="menu_profile">Profil</string>
    <string name="full_name">Nama lengkap</string>
    <string name="next">Berikutnya</string>
    <string name="nickname">Nama panggilan</string>
    <string name="chat">Chat</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="gender">Jenis kelamin</string>
    <string name="birth_place">Tempat lahir</string>
    <string name="dd">dd</string>
    <string name="mm">MM</string>
    <string name="yyyy">yyyy</string>
    <string name="birth_date">Tanggal lahir</string>
    <string name="client_registration_form">Form Registrasi</string>
    <string name="religion">Agama</string>
    <string name="address_or_domicile">Alamat / domisili</string>
    <string name="phone_number">No HP</string>
    <string name="recent_education">Pendidikan terakhir / saat ini</string>
    <string name="client_data">Data Pribadi Klien</string>
    <string name="page_1">1/5</string>
    <string name="education_history">Riwayat Pendidikan</string>
    <string name="page_2">2/5</string>
    <string name="address_or_domicile_kindergarten">Data TK</string>
    <string name="address_or_domicile_elementary">Data SD</string>
    <string name="address_or_domicile_junior">Data SMP</string>
    <string name="address_or_domicile_senior">Data SMA</string>
    <string name="address_or_domicile_college">Data Perguruan Tinggi</string>
    <string name="client_education_history">Riwayat Pendidikan</string>
    <string name="education_address_instruction">Apabila lebih dari satu sekolah, satu sekolah diisi dengan format di atas, kemudian tambahkan titik koma (;) di akhir dan isi lagi sesuai format</string>
    <string name="client_family">Data Keluarga</string>
    <string name="education_data_instruction">Format penulisan: Nama sekolah / alamat atau domisili / tahun masuk / tahun lulus. Contoh: SMP 12 / Wijaya IX / 2011 / 2014</string>
    <string name="name">Nama</string>
    <string name="age">Usia</string>
    <string name="tribe">Suku</string>
    <string name="mother_address">Alamat</string>
    <string name="father_data">Data ayah / wali</string>
    <string name="mother_data">Data ibu / wali</string>
    <string name="occupation">Pekerjaan</string>
    <string name="latest_education">Pendidikan terakhir</string>
    <string name="page_3">3/5</string>
    <string name="first_sibling_data">Data anak ke-1</string>
    <string name="second_sibling_data">Data anak ke-2</string>
    <string name="third_sibling_data">Data anak ke-3</string>
    <string name="fourth_sibling_data">Data anak ke-4</string>
    <string name="fifth_sibling_data">Data anak ke-5</string>
    <string name="page_4">4/5</string>
    <string name="page_5">5/5</string>
    <string name="sibling_hint">Isi sesuai jumlah saudara termasuk klien sendiri dan lanjutkan ke bagian berikutnya :)</string>
    <string name="client_sibling">Data Saudara Sekandung</string>
    <string name="psychological_record">Riwayat Psikologis</string>
    <string name="current_problem">Masalah saat ini yang dihadapi</string>
    <string name="place_of_consultation">Tempat konsultasi</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="consultation_date">Bulan dan tahun konsultasi</string>
    <string name="complaint">Keluhan</string>
    <string name="solution">Upaya yang dilakukan</string>
    <string name="effort_done">Usaha yang pernah dilakukan untuk mengatasi</string>
    <string name="agreement_statement">Saya sebagai klien, mengerti bahwa saya memiliki hak untuk menyetujui atau tidak menyetujui halaman ini. Selain itu, saya juga memahami layanan yang saya pilih beserta segala kelebihan dan kekurangannya, serta kompetensi, kualifikasi, dan keterbatasan yang dimiliki oleh Psikolog / Mahasiswa Profesi Psikologi yang bekerjasama dengan saya. Lebih lanjut lagi, saya juga memahami hak dan kewajiban yang saya miliki sebagai seorang klien. Saya juga telah memendiskusikan dan setuju untuk terlibat dan bekerjasama sebaik mungkin bersama dengan Psikolog selama sesi konsultasi berlangsung.</string>
    <string name="final_statement">Pernyataan ini saya buat secara sadar, sukarela, dan tanpa adanya paksaan dari pihak manapun</string>
    <string name="agree">Saya setuju</string>
    <string name="continu">Lanjutkan</string>
    <string name="has_consulted">Apakah kamu pernah berkonsultasi kepada psikolog?</string>
    <string name="find_counselor">Cari Psikolog</string>
    <string name="list_of_counselor">Daftar Psikolog</string>
    <string name="counselor_detail">Profil Psikolog</string>
    <string name="edit">Edit</string>
    <string name="save">Simpan</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="nearest_schedule">Jadwal terdekat</string>
    <string name="ongoing_schedule">Konsultasi saat ini</string>
    <string name="no_upcoming_schedule">Kamu tidak memiliki jadwal konsultasi dalam waktu dekat</string>
    <string name="no_ongoing_schedule">Kamu tidak memiliki konsultasi yang sedang berlangsung</string>
    <string name="generic_home_placeholder">Halo %s, ayo konsultasikan masalah kamu sekarang</string>
    <string name="heat_form_header">Panas</string>
    <string name="preconsultation_instruction">Sebelum kamu melakukann konsultasi, terdapat kata-kata di bawah ini yang menggambarkan perasaan/emosi. Kamu diminta untuk mengisi tingkat emosi tersebut saat ini dengan skala 1-6</string>
    <string name="preconsultation_scale_start">1: Sangat kecil/tidak sama sekali</string>
    <string name="preconsultation_scale_end">6: Sangat besar</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="question_1">Tertarik pada sesuatu</string>
    <string name="end">Selesaikan</string>
    <string name="consultation_schedule_list">Jadwal Konsultasi</string>
    <string name="mini_ipip">Mini IPIP</string>
    <string name="mini_ipip_description">(MINI - International Personality Item Pool). Bagian ini terdiri dari 20 pernyataan dan Anda diminta untuk memberikan jawaban yang paling menggambarkan diri. Kata "Saya" dalam pernyataan-pernyataan di bawah merujuk pada diri Anda. Deskripsikan diri Anda secara jujur seperti diri Anda sekarang, bukan seperti diri yang Anda inginkan di masa depan.  Bacalah tiap penyataan secara hati-hati kemudian pilihlah satu dari enam pilihan jawaban yang paling menggambarkan diri Anda.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="ipip_warning">Ketika anda memilih untuk kembali ke halaman sebelumnya, isian data ini akan hilang dan harus diisi kembali</string>
    <string name="srq">SRQ</string>
    <string name="srq_description">Self Reporting Questionnaire</string>
    <string name="six">6</string>
    <string name="panas_title">Survei PANAS (Termometer Emosi)</string>
    <string name="panas_instruction_1">1: Sangat tidak sesuai</string>
    <string name="panas_instruction_2">6: Sangat sesuai</string>


</resources>
