<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/action_counselor"
        android:icon="@drawable/icon_counselor"
        android:title="@string/menu_counselor" />
    <item
        android:id="@+id/action_consultation"
        android:icon="@drawable/icon_consultation"
        android:title="@string/menu_consultation" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/menu_profile" />
    <!--    <item android:id="@+id/action_consultation"-->
    <!--        android:title="@string/menu_navigation"-->
    <!--        android:icon="@drawable/ic_action_navigation_menu" />-->
    <!--    <item android:id="@+id/action_profile"-->
    <!--        android:title="@string/menu_navigation"-->
    <!--        android:icon="@drawable/ic_action_navigation_menu" />-->
</menu>