<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="id.ac.ui.cs.mobileprogramming.ilham_darmawan.konselink_client.viewmodel.RegistrationViewModel" />

        <import type="id.ac.ui.cs.mobileprogramming.ilham_darmawan.konselink_client.R" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_statement" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_statement" />

                <CheckBox
                    android:id="@+id/checkbox_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/footer_margin_top"
                    android:checked="@{viewmodel.agreeToStatement}"
                    android:text="@string/agree" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="@dimen/footer_margin_top"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/button_fragment_final_previous"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:rotation="180"
                        android:src="@drawable/arrow_next" />

                    <Button
                        android:id="@+id/button_continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clickable="@{viewmodel.agreeToStatement}"
                        android:gravity="center"
                        android:padding="@dimen/button_default_padding"
                        android:text="@string/continu"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:disabledDrawable="@{viewmodel.disabledDrawable}"
                        app:enabledDrawable="@{viewmodel.enabledDrawable}"
                        app:isAgree="@{viewmodel.agreeToStatement}" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_two"
            android:translationZ="5dp"
            android:visibility="gone">

            <com.github.ybq.android.spinkit.SpinKitView
                style="@style/SpinKitView.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:SpinKit_Color="@color/bg_dark_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</layout>